Fixed nav for guides on mobile, fixed blank space at top of non-guides pages for mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -36,7 +36,16 @@
     bottom: 10px;
     margin: 6px 2px 0 0
 }
-
+@media screen and (max-width: 1200px) {
+  .no-nav-clearfix {
+    margin-top: 1px!important;
+  }
+}
+@media screen and (min-width: 1201px) {
+  .no-nav-clearfix {
+    margin-top: 40px!important;
+  }
+}
 .newer{
   float: left;
 }
